tasks/coverage/snapshots/postcss_parser/comments.txt
hdx_parser::Unimplemented

  × The token as [114..117) cannot yet be parsed by the parser :(
   ╭─[tasks/coverage/postcss-parser-tests/cases/comments.css:7:1]
 7 │     /* between */
 8 │     border-radius: 3px / 7px
   ·                    ─┬─
   ·                     ╰── Didn't recognise this bit
 9 │     /* end */
   ╰────
  help: This feature needs to be implemented within hdx. This file won't parse without it.
hdx_parser::UnknownDeclaration

  × Ignored property due to parse error.
    ╭─[tasks/coverage/postcss-parser-tests/cases/comments.css:7:1]
  7 │         /* between */
  8 │ ╭─▶     border-radius: 3px / 7px
  9 │ ├─▶     /* end */
    · ╰──── This property was ignored.
 10 │     }
 11 │     /* b */
    ╰────
  help: This property is going to be ignored because it doesn't look valid. If it is valid, please file an issue!
hdx_parser::UnknownColor

  × Unknown named color 'var'
    ╭─[tasks/coverage/postcss-parser-tests/cases/comments.css:18:1]
 18 │ .in/**/side {
 19 │   color: var/**/(--broken);
    ·          ─┬─
    ·           ╰── This isn't a known color
 20 │   font-family: sans-serif,/**/serif;
    ╰────
  help: Replace this unknown color with a known named color or a valid color value.
hdx_parser::UnknownDeclaration

  × Ignored property due to parse error.
    ╭─[tasks/coverage/postcss-parser-tests/cases/comments.css:18:1]
 18 │     .in/**/side {
 19 │ ╭─▶   color: var/**/(--broken);
 20 │ ├─▶   font-family: sans-serif,/**/serif;
    · ╰──── This property was ignored.
 21 │     }
    ╰────
  help: This property is going to be ignored because it doesn't look valid. If it is valid, please file an issue!
